# zpng

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: filter.rs  header.rs  lib.rs
tests/: edge_cases.rs  errors.rs  filter.rs  golden.rs  header.rs  props.rs  roundtrip.rs
tests/common/: mod.rs
tests/fixtures/: README.md  gray_8x8.raw  gray_8x8.zpng  rgb_4x4.raw  rgb_4x4.zpng  rgb_6x3_random.raw  rgb_6x3_random.zpng  rgba_4x4.raw  rgba_4x4.zpng
